name:                hasio-basic
version:             0.1.0.0
synopsis:            Target casio BASIC without using GOTOs.
description:         See README.md.
author:              Chris Gadzinski
maintainer:          zenmags@gmail.com
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hasio-basic
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
