name:                hasio-basic
version:             0.1.0.0
synopsis:            Target casio BASIC without using GOTOs.
description:         See README.md in project root.
author:              Chris Gadzinski
maintainer:          zenmags@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable hasio-basic
    build-depends:       base >=4.8 && <4.9
    hs-source-dirs:      src

    main-is:             Main.hs
    other-modules:
        Hasio,
            Hasio.Lang,
                Hasio.Lang.Basic,
            Hasio.Application
    -- other-extensions:
    default-language:    Haskell2010
